<resources>
    <string name="app_name">Student Accommodation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="favourite_list">Favourite List</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="please_log_in">Please log in</string>
    <string name="logout">Logout</string>
    <string name="login_create">Login/Create</string>
    <string name="notifications">Notifications</string>
    <string name="agree_to_hogo_ts_cs"><![CDATA[Agree to Hugo Ts&Cs]]></string>
</resources>