<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment"
    android:id="@+id/scrollview">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/toolbarRl"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/toolbar_bg02">
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profileIv"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/person_black"
                android:background="?attr/colorOnPrimary"
                android:layout_centerHorizontal="true"
                app:shapeAppearanceOverlay="@style/ImageStyle_Circle"
                android:layout_marginVertical="15dp"/>
            <TextView
                android:id="@+id/fullNameTv"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/please_log_in"
                android:layout_below="@id/profileIv"
                android:layout_centerHorizontal="true"
                android:textColor="?attr/colorOnPrimary"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/emailLabelTv"
                style="@style/TextAppearance.Material3.LabelLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email"/>
            <TextView
                android:id="@+id/emailTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                tools:text="example@email.com"/>

            <TextView
                android:id="@+id/courseLabelTv"
                style="@style/TextAppearance.Material3.LabelLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailLabelTv"
                android:layout_marginTop="10dp"
                android:text="Course"/>
            <TextView
                android:id="@+id/courseTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/emailLabelTv"
                android:layout_marginTop="10dp"
                tools:text="BINCT"/>

            <TextView
                android:id="@+id/birth_dateLabelTv"
                style="@style/TextAppearance.Material3.LabelLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/courseLabelTv"
                android:layout_marginTop="10dp"
                android:text="Date of birth"/>
            <TextView
                android:id="@+id/birth_dateTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/courseLabelTv"
                android:layout_marginTop="10dp"
                tools:text="@tools:sample/date/ddmmyy"/>

            <TextView
                android:id="@+id/institutionLabelTv"
                style="@style/TextAppearance.Material3.LabelLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/birth_dateLabelTv"
                android:layout_marginTop="10dp"
                android:text="Institution"/>
            <TextView
                android:id="@+id/institutionTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/birth_dateLabelTv"
                android:layout_marginTop="10dp"
                tools:text="Durban University of Technology"/>

            <TextView
                android:id="@+id/genderLabelTv"
                style="@style/TextAppearance.Material3.LabelLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/institutionLabelTv"
                android:layout_marginTop="10dp"
                android:text="Gender"/>
            <TextView
                android:id="@+id/genderTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/institutionLabelTv"
                android:layout_marginTop="10dp"
                tools:text="Male"/>

            <TextView
                android:id="@+id/national_idLabelTv"
                style="@style/TextAppearance.Material3.LabelLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/genderLabelTv"
                android:layout_marginTop="10dp"
                android:text="National ID"/>
            <TextView
                android:id="@+id/national_idTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/genderLabelTv"
                android:layout_marginTop="10dp"
                tools:text="00000000000000"/>

            <TextView
                android:id="@+id/student_numberLabelTv"
                style="@style/TextAppearance.Material3.LabelLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/national_idLabelTv"
                android:layout_marginTop="10dp"
                android:text="Student No."/>
            <TextView
                android:id="@+id/student_numberTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/national_idLabelTv"
                android:layout_marginTop="10dp"
                tools:text="0000000"/>

            <TextView
                android:id="@+id/interestsLabelTv"
                style="@style/TextAppearance.Material3.LabelLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/student_numberLabelTv"
                android:layout_marginTop="10dp"
                android:text="Interests"/>
            <TextView
                android:id="@+id/interestsTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/student_numberLabelTv"
                android:layout_marginTop="10dp"
                tools:text="Gaming"/>

            <TextView
                android:id="@+id/home_addressLabelTv"
                style="@style/TextAppearance.Material3.LabelLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/interestsLabelTv"
                android:layout_marginTop="10dp"
                android:text="Home Address"/>
            <TextView
                android:id="@+id/home_addressTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/interestsLabelTv"
                android:layout_marginTop="10dp"
                tools:text="13 idk road, Durban"/>

            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/home_addressLabelTv"
                android:layout_marginTop="20dp"
                android:onClick="logoutBtn"
                android:text="@string/logout" />
        </RelativeLayout>
        <Button
            android:id="@+id/account"
            android:onClick="AccountBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_create"
            />
    </LinearLayout>
</ScrollView>